# drafter

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  ACQUISITION_READY_PACKAGE.md  ADDITIONAL_FEATURES_ROADMAP.md  ADVANCED_FEATURES_IMPLEMENTED.md  ALL_30_FEATURES_IMPLEMENTED.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  ENTERPRISE_FEATURES_COMPLETE.md  FEATURES_VERIFIED.md  IMPLEMENTATION_COMPLETE.md  PRIVACY.md  PRODUCTION_READY_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  QUICK_START.md  README.md  SECRETS_SETUP.md  SECURITY.md  SETTLEMENT_CALCULATOR_COMPLETE_FEATURES.md  SETTLEMENT_CALCULATOR_ENHANCEMENTS.md  SETTLEMENT_CALCULATOR_FINAL_SUMMARY.md  docker-compose.yml  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: citation_benchmarks.rs
src-tauri/migrations/: 001_initial.sql  003_case_management.sql  004_hierarchical_cases.sql  005_bulk_data_import.sql  006_settlement_calculator.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  rest_api.rs
src-tauri/src/commands/: document_commands.rs  enterprise_commands.rs  mod.rs  settlement.rs
src-tauri/src/config/: mod.rs  security.rs
src-tauri/src/domain/: case_management.rs  mod.rs
src-tauri/src/providers/: client.rs  county_efiling.rs  courtlistener.rs  ctrack.rs  govinfo.rs  harvard_caselaw.rs  mod.rs  pacfile.rs  rate_limiter.rs  recap.rs  ujs_portal.rs
src-tauri/src/services/: ai_automation_suite.rs  ai_citation_service.rs  ai_legal_research.rs  ai_research_assistant.rs  automation.rs  billing.rs  bulk_data_ingestion.rs  bulk_import_service.rs  calendar_sync.rs  citations.rs  (+30 more)
src-tauri/templates/: motion_basic.txt
src-tauri/tests/: integration_tests.rs  test_config.rs
(+65 files in other folders)
