[package]
name = "pa-edocket-desktop"
version = "0.1.0"
description = "PA eDocket Desktop - Production-grade cross-platform desktop application for Pennsylvania court docket management"
authors = ["PA eDocket Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/quartzxmoon/drafter"

[lib]
name = "pa_edocket_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
regex = "1.10"
base64 = "0.22"
sha2 = "0.10"
zip = "2.1"
keyring = "3.0"
validator = { version = "0.18", features = ["derive"] }
urlencoding = "2.1"
async-trait = "0.1"
scraper = "0.20"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

